# isimip-files-api

./: .env.sample  .gitignore  .pre-commit-config.yaml  CITATION.cff  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  run.sh  setup.py
api/: netcdf.py  settings.py  utils.py
cutout/: __init__.py  app.py  jobs.py  settings.py  tasks.py  utils.py  validators.py
docs/: operations.md  setup.md
examples/: cutout_bbox.py  cutout_bbox_geojson.py  cutout_point.py  mask_bbox.py  mask_country.py  mask_landonly.py  mask_shapefile.py  select_bbox.py  select_point.py  time_series_bbox.py  time_series_country.py  time_series_geojson.py  time_series_point.py  time_series_shapefile.py
isimip_files_api/: __init__.py  app.py  cdo.py  config.py  exceptions.py  jobs.py  logging.py  nco.py  netcdf.py  responses.py  scripts.py  settings.py  tasks.py  utils.py  validators.py  worker.py
isimip_files_api/commands/: __init__.py  cdo.py  create_mask.py  ncks.py
isimip_files_api/commands/python/: create_mask.py
isimip_files_api/operations/: __init__.py  cdo.py  create_mask.py  ncks.py  nco.py
isimip_files_api/operations/python/: create_mask.py
isimip_files_api/scripts/: create_mask.py
isimip_files_api/tests/: conftest.py  test_create.py  test_create_compute_mean.py  test_create_create_mask.py  test_create_cutout_bbox.py  test_create_fldmean.py  test_create_mask_bbox.py  test_create_mask_country.py  test_create_mask_landonly.py  test_create_mask_mask.py  test_create_mask_shape.py  test_create_output_csv.py  test_create_outputtab.py  test_create_select_bbox.py  test_create_select_country.py  test_create_select_point.py  test_delete.py  test_detail.py  test_root.py  test_validate.py  test_validate_create_mask.py  test_validate_cutout_bbox.py  test_validate_cutout_point.py  test_validate_mask_bbox.py  test_validate_mask_country.py  test_validate_mask_landonly.py  test_validate_mask_mask.py  test_validate_select_bbox.py  test_validate_select_point.py
testing/input/: constant.nc  large.nc
testing/masks/: mask.nc
testing/shapes/: pm.dbf  pm.json  pm.nc  pm.shp  pm.shx
